# bio

./: CMakeLists.txt  README.md  basic_logger.cpp  basic_logger.h  byte_stream.h  container.h  file.h  file_stream.h  main.cpp  screen_stream.h  stream.h  stream_utils.h
tests/: CMakeLists.txt  basic_io_test.cpp  container_basic_test.cpp
